--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 streamlit==1.26.0
-torch==2.7.1
-torchvision==0.22.1
+torch==2.0.1
+torchvision==0.15.2
+open-clip-torch==2.23.0
 faiss-cpu==1.7.4
 Pillow
 numpy
+tqdm
